--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,31 @@ body {
 .animate-bounce1 {
   animation: bounce 5s infinite;
 }
+
+/* Firefox */
+/* * {
+  scrollbar-width: thin;
+  scrollbar-color: #facde1 #f1f1f1 ;
+  scrollbar-width: 10;
+} */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #facde1;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F472B6;
+}
+
